Fix editing autostart entries when /usr/local/share/applications doesn't exist

QFileInfo.canonicalFilePath() returns an empty string for non-existant directories, which matches any .desktop file path and makes
KPropertiesDialog try to save it to the wrong location. Make sure that the dir exists before trying to match it in the .desktop file path

BUG: 371194
REVIEW: 129280
FIXED-IN: 5.28